--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "minimatch": "^3.0.4",
     "open": "^6.3.0",
     "ora": "3.2.0",
+    "os-homedir": "^2.0.0",
     "portfinder": "^1.0.13",
     "progress": "^2.0.3",
     "request": "^2.87.0",
